--- a/custom.org
+++ b/custom.org
@@ -423,12 +423,12 @@ function.
              (caar l)
            (set--font-from-list (cdr l)))))
 
-     (defvar font-list '(("Source_Code_Pro" . 11)
-                         ("Glass_TTY_VT220" . 20)
+     (defvar font-list '(("Source Code Pro" . 11)
+                         ("Glass TTY VT220" . 20)
                          ("Consolas" . 18)
-                         ("Ubuntu_Mono" . 17)
+                         ("Ubuntu Mono" . 17)
                          ("Inconsolata" . 18)
-                        ("DejaVu_Sans_Mono" . 18))
+                        ("DejaVu Sans Mono" . 18))
        "Ordered list of preferred fonts and sizes.")
 
      (set--font-from-list font-list)
