--- a/custom.org
+++ b/custom.org
@@ -1448,14 +1448,8 @@ function.
 ** IPython
 
    #+BEGIN_SRC emacs-lisp
-     (setq
-      python-shell-interpreter "ipython"
-      python-shell-interpreter-args ""
-      python-shell-prompt-regexp "In \\[[0-9]+\\]: "
-      python-shell-prompt-output-regexp "Out\\[[0-9]+\\]: "
-      python-shell-completion-setup-code "from IPython.core.completerlib import module_completion"
-      python-shell-completion-module-string-code "';'.join(module_completion('''%s'''))\n"
-      python-shell-completion-string-code "';'.join(get_ipython().Completer.all_completions('''%s'''))\n")
+     (setq python-shell-interpreter "ipython"
+           python-shell-interpreter-args "-i")
    #+END_SRC
 
 * recentf
