Update variable name in cider.

--- a/custom.org
+++ b/custom.org
@@ -554,7 +554,7 @@ function.
     (add-hook 'cider-mode-hook 'k20e/cider-mode-hook)
 
     (setq nrepl-hide-special-buffers t
-          cider-repl-popup-stacktraces nil
+          cider-show-error-buffer nil
           cider-repl-use-pretty-printing t
           cider-repl-history-file (expand-file-name "nrepl-history" k20e/dropbox-directory))
   #+END_SRC
