Add terminal-notifier section.

--- a/custom.org
+++ b/custom.org
@@ -1615,6 +1615,15 @@ function.
      (define-key term-mode-map (kbd "M-x") 'smex)
    #+END_SRC
 
+* terminal-notifier
+
+  This is a tiny package that I wrote to help with displaying
+  notifications in OS X.
+
+  #+BEGIN_SRC emacs-lisp
+    (require 'terminal-notifier)
+  #+END_SRC
+
 * text-mode
 
   #+BEGIN_SRC emacs-lisp
