--- a/custom.org
+++ b/custom.org
@@ -334,6 +334,24 @@ function.
        (forward-line 1))
 
      (global-set-key (kbd "M-l") 'k20e/mark-current-line)
+
+     (defun k20e/open-line-below ()
+       "Insert a new line below the current line."
+       (interactive)
+       (end-of-line)
+       (newline)
+       (indent-for-tab-command))
+
+     (defun k20e/open-line-above ()
+       "Insert a new line above the current line."
+       (interactive)
+       (beginning-of-line)
+       (newline)
+       (forward-line -1)
+       (indent-for-tab-command))
+
+     (global-set-key (kbd "<M-return>") 'k20e/open-line-below)
+     (global-set-key (kbd "<M-S-return>") 'k20e/open-line-above)
    #+END_SRC
 
 ** TODO Migrate [[https://github.com/krismolendyke/.emacs.d/blob/master/elisp/defuns.el][=defuns.el=]] here
